2019-04-02 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added Up Arrow key functionality, it only works because I re-implemented the enter key so it fills unused space in each line of the terminal with a null character - which are stripped anyway in the saving function.
	Added Left Arrow Key functionality.  It moves back one space.
	With the addition of Right and down Arrow Keys, I have now completed the addition of arrow key functionality.
	Fixed off-by-one error where a corrupted character was saved to the end of the file.
	Patched error where the first character of a file written in Aviate was deleted upon saving.
	Added addToTextFileStruct() to add a character to a given textFile.  This saves some lines of code.
	Did some code cleanup, added even more comments to document the code.  Removed unnecessary includes.
	Moved ALT_KEY_BACKSPACE from a const int to a #define, as some versions of GCC won't accept it.
	Stopped fclose()ing file if it's null in checkIfFileExists() - it can cause segfault in some versions of GCC.

	*README: Updated README.

	*makefile: added -std flag to ensure the compiler uses the right standards.

	*CHANGELOG: Documented recent changes.
	Fixed a typo with the date from yesterday.
	Mass spelling and grammar corrections.

2019-04-01 James Phillips <james@jamesphillipsuk.com>
	*main.c: Modified initialiseTextFile() for memory efficiency.
	Modified rewriteFile() so it doesn't close NCurses and hide our output until we give it a character.
	Minor alterations to comments and code cleanliness.
	Modified getFileContents() so it doesn't get null data before the start of the file, or crash at the end.
	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCurses caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.